refactor: restructure frontend and improve partial loading

--- a/frontend/pages/404.html
+++ b/frontend/pages/404.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
-<html lang="fa" dir="rtl">
+<html lang="fa" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ورود یا ثبت نام</title>
+    <meta name="description" content="خطای ۴۰۴ - صفحه مورد نظر یافت نشد">
+    <title>404 - صفحه یافت نشد</title>
     <link rel="stylesheet" href="/assets/css/main.css">
     <link rel="stylesheet" href="/assets/css/font.css">
 </head>
 <!-- ✅ شناسه صفحه برای اجرای اسکریپت‌های مربوطه -->
 <body class="bg-gray-50" data-page="auth">
-  <div data-include="/partials/components/notifications.html"></div>
-    <!-- ✅ هدر اضافه شد -->
-    <div data-include="/partials/header.html"></div>
+
 
     <main>
       <!-- کامپوننت فرم ورود بدون تغییر باقی می‌ماند -->
-      <div data-include="/partials/auth/login-form.html"></div>
+      <div data-include="/partials/404.html"></div>
     </main>
     
-    <!-- ✅ فوتر اضافه شد -->
-    <div data-include="/partials/footer.html"></div>
 
     <script type="module" src="/assets/js/main.js"></script>
 </body>
