--- a/frontend/pages/about.html
+++ b/frontend/pages/about.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="آشنایی با تیم و اهداف فروشگاه تیپ نتی">
     <title>درباره ما | فروشگاه شما</title>
     <link rel="stylesheet" href="/assets/css/main.css">
 </head>
@@ -17,11 +18,5 @@
     <div data-include="/partials/footer.html"></div>
 
     <script type="module" src="/assets/js/main.js"></script>
-    <script type="module">
-      // این اسکریپت در تمام صفحات برای بارگذاری partial ها تکرار می‌شود
-      const modules = import.meta.glob('/partials/**/*.html', { query: '?raw' });
-      async function includeHTML() { /* ... کد کامل اسکریپت ... */ }
-      await includeHTML();
-    </script>
 </body>
 </html>
