--- a/frontend/pages/contact.html
+++ b/frontend/pages/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="راه‌های ارتباط با فروشگاه تیپ نتی و پشتیبانی">
     <title>تماس با ما - تیپ نتی</title>
     <link rel="stylesheet" href="/assets/css/main.css">
 </head>
